--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             Wanted 
         </h1>
         <h2>Lion</h2>
-        <img src="https://thumbs.dreamstime.com/b/big-lion-lying-savannah-grass-landscape-characteristic-trees-plain-hills-background-35172905.jpg">
+        <img src="https://cdn.pixabay.com/photo/2017/10/25/16/54/african-lion-2888519__340.jpg">
         <p>Name:- leo
             <br>
             age;-30
